--- a/painel/index.html
+++ b/painel/index.html
@@ -1,70 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Key Panel — Mczin</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Painel – Login</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="card" style="grid-row:1 / span 2">
-      <div class="header">
-        <div class="logo">K</div>
-        <div>
-          <h3 class="h1">Mczin Keys</h3>
-          <div class="small">Gerencie suas keys — expiração, uso, logs</div>
-        </div>
-      </div>
 
-      <div id="authBox" style="margin-top:15px;">
-        <h4>Login</h4>
-        <input id="user" placeholder="Usuário" class="input" />
-        <input id="pass" placeholder="Senha" type="password" class="input" />
-        <div style="margin-top:8px">
-          <button class="btn-primary" onclick="login()">Entrar</button>
-        </div>
-      </div>
+  <div class="login-box">
+    <h2>Painel</h2>
 
-      <div id="mainApp" style="display:none;margin-top:14px">
-        <div class="controls">
-          <div class="row">
-            <select id="type" class="input">
-              <option value="normal">Normal</option>
-              <option value="vip">VIP (lifetime)</option>
-            </select>
-          </div>
-          <div class="row">
-            <input id="days" type="number" placeholder="Dias" class="input" />
-            <input id="hours" type="number" placeholder="Horas" class="input" />
-            <input id="minutes" type="number" placeholder="Minutos" class="input" />
-          </div>
-          <button class="btn-primary" onclick="generateKeyUI()">Gerar Key</button>
-        </div>
-      </div>
-    </div>
+    <input type="text" id="user" placeholder="Usuário">
+    <input type="password" id="pass" placeholder="Senha">
 
-    <div class="card">
-      <div class="topbar">
-        <div>
-          <div class="small-muted">Keys Ativas</div>
-        </div>
-        <div class="badge">Painel seguro</div>
-      </div>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Key</th>
-            <th>Expira</th>
-            <th>Usos</th>
-            <th>Executor</th>
-            <th>IP</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody id="keysBody"></tbody>
-      </table>
-    </div>
+    <button onclick="login()">Entrar</button>
+
+    <p id="msg"></p>
   </div>
 
   <script src="app.js"></script>
