--- a/painel/index.html
+++ b/painel/index.html
@@ -21,3 +21,51 @@
   <script src="app.js"></script>
 </body>
 </html>
+
+body {
+  margin: 0;
+  background: #0a0a0a;
+  font-family: Arial, sans-serif;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-box {
+  background: #111;
+  padding: 40px;
+  border-radius: 10px;
+  width: 300px;
+  text-align: center;
+  color: white;
+  box-shadow: 0 0 20px rgba(255,0,0,0.2);
+}
+
+.login-box input {
+  width: 100%;
+  margin-top: 10px;
+  padding: 12px;
+  border-radius: 6px;
+  border: none;
+  background: #222;
+  color: white;
+}
+
+.login-box button {
+  margin-top: 15px;
+  width: 100%;
+  padding: 12px;
+  border: none;
+  background: #ff0000;
+  color: white;
+  border-radius: 6px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+#msg {
+  margin-top: 12px;
+  color: #ccc;
+  font-size: 14px;
+}
