--- a/painel/dashboard.html
+++ b/painel/dashboard.html
@@ -44,9 +44,9 @@
 
 <script>
 // CONFIGURAÇÃO DO TOKEN
-const TOKEN_PADRAO = "SEU_TOKEN_AQUI"; // Coloque sua senha aqui
+const TOKEN_PADRAO = "Mczin121314#"; // Coloque sua senha aqui
 let token = localStorage.getItem("panel_token"); 
-if(!token && TOKEN_PADRAO !== "SEU_TOKEN_AQUI") { token = TOKEN_PADRAO; localStorage.setItem("panel_token", TOKEN_PADRAO); }
+if(!token && TOKEN_PADRAO !== "Mczin121314#") { token = TOKEN_PADRAO; localStorage.setItem("panel_token", TOKEN_PADRAO); }
 
 // PROTEÇÃO INICIAL
 (async function protectRoute() {
