--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ async function login() {
     }
 
     try {
-        const response = await fetch("/api/login", {
+        const response = await fetch("/api/check", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ user, pass }),
