--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Painel - Login</title>
+<title>Painel 🔵 PP Xits 〽️</title>
 
 <style>
     body {
@@ -98,7 +98,7 @@ async function login() {
     }
 
     try {
-        const response = await fetch("/api/check", {
+        const response = await fetch("/api/login", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ user, pass }),
