--- a/painel/dashboard.html
+++ b/painel/dashboard.html
@@ -392,7 +392,7 @@
 
 // O token de acesso que permite interagir com sua API no Vercel.
 // VOCÊ DEVE PREENCHER ESTA VARIÁVEL COM SEU TOKEN SECRETO!
-const token = "SEU_TOKEN_SECRETO_AQUI"; 
+const token = "MczinOwner"; 
 // Mude o valor acima. Ex: const token = "abc-123-xyz";
 
 let allKeys = [];
